--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,60 @@
-backports-abc==0.4
-backports.shutil-get-terminal-size==1.0.0
-backports.ssl-match-hostname==3.5.0.1
-certifi==2016.8.8
-configparser==3.5.0
+attrs==19.3.0
+backcall==0.2.0
+bleach==3.1.5
 cycler==0.10.0
-decorator==4.0.10
-entrypoints==0.2.2
-functools32==3.2.3.post2
-ipykernel==4.4.1
-ipython==5.1.0
-ipython-genutils==0.1.0
-ipywidgets==5.2.2
-Jinja2==2.8
-jsonschema==2.5.1
+decorator==4.4.2
+defusedxml==0.6.0
+dlib==19.20.99
+entrypoints==0.3
+importlib-metadata==1.7.0
+ipykernel==5.3.2
+ipython==7.16.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.17.1
+Jinja2==2.11.2
+joblib==0.16.0
+jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==4.3.0
-jupyter-console==5.0.0
-jupyter-core==4.1.1
-MarkupSafe==0.23
-matplotlib==1.5.2
-mistune==0.7.3
-nbconvert==4.2.0
-nbformat==4.1.0
-notebook==4.2.2
-numpy==1.11.1
-pandas==0.18.1
-pathlib2==2.1.0
-pexpect==4.2.0
-pickleshare==0.7.4
-prompt-toolkit==1.0.6
-ptyprocess==0.5.1
-Pygments==2.1.3
-pyparsing==2.1.8
-python-dateutil==2.5.3
-pytz==2016.6.1
-pyzmq==15.4.0
-qtconsole==4.2.1
-scikit-learn==0.17.1
-scipy==0.18.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.10.0
-terminado==0.6
-tornado==4.4.1
-traitlets==4.2.2
-wcwidth==0.1.7
-widgetsnbextension==1.2.6
+jupyter-client==6.1.6
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+kiwisolver==1.2.0
+MarkupSafe==1.1.1
+matplotlib==3.3.0
+mistune==0.8.4
+nbconvert==5.6.1
+nbformat==5.0.7
+notebook==6.0.3
+numpy==1.18.4
+packaging==20.4
+pandas==1.0.5
+pandocfilters==1.4.2
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.2.0
+prometheus-client==0.8.0
+prompt-toolkit==3.0.5
+ptyprocess==0.6.0
+Pygments==2.6.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pytz==2020.1
+pyzmq==19.0.1
+qtconsole==4.7.5
+QtPy==1.9.0
+scikit-learn==0.23.1
+scipy==1.5.1
+Send2Trash==1.5.0
+six==1.15.0
+terminado==0.8.3
+testpath==0.4.4
+threadpoolctl==2.1.0
+tornado==6.0.4
+traitlets==4.3.3
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+zipp==3.1.0
